--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,91 @@
-.venv/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+tf_env/
+
+# PyTorch
+*.pth
+*.pt
+
+# TensorFlow
+*.pb
+*.tflite
+*.h5
+*.hdf5
+saved_model/
+logs/
+tensorboard_logs/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Machine Learning datasets and models
+*.csv
+*.txt
+*.json
+*.pkl
+*.pickle
+*.joblib
+*.npz
+*.npy
+data/
+datasets/
+models/
+checkpoints/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+
+# Documentation
+docs/_build/
